added profile page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bootstrap Example</title>
+    <title>Dashboard</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#"><img src="./img/D.svg" />Democratrade</a></li>
                     <li class="active"><a href="#"><img src="./img/D.svg" />Marketplace</a></li>
-                    <li><a href="#"><img src="./img/D.svg" />Portfolio</a></li>
+                    <li><a href="portfolio.html"><img src="./img/D.svg" />Portfolio</a></li>
                     <li><a href="#"><img src="./img/D.svg" />Achievements</a></li>
                     <li><a href="#"><img src="./img/D.svg" />Settings</a></li>
                 </ul>
