--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <td class="green">2.6%</td>
                                 <td class="green">Low</td>
                                 <td>
-                                    <div class="btn btn-primary">view</div>
+                                    <a href="user.html" class="btn btn-primary">view</a>
                                 </td>
                             </tr>
                             <tr>
@@ -92,7 +92,7 @@
                                 <td class="green">2.6%</td>
                                 <td class="green">Low</td>
                                 <td>
-                                    <div class="btn btn-primary">view</div>
+                                    <a href="user.html" class="btn btn-primary">view</a>
                                 </td>
                             </tr>
                             <tr>
@@ -105,7 +105,7 @@
                                 <td class="green">2.6%</td>
                                 <td class="green">Low</td>
                                 <td>
-                                    <div class="btn btn-primary">view</div>
+                                    <a href="user.html" class="btn btn-primary">view</a>
                                 </td>
                             </tr>
                             <tr>
@@ -118,7 +118,7 @@
                                 <td class="green">2.6%</td>
                                 <td class="green">Low</td>
                                 <td>
-                                    <div class="btn btn-primary">view</div>
+                                    <a href="user.html" class="btn btn-primary">view</a>
                                 </td>
                             </tr>
                             <tr>
@@ -131,7 +131,7 @@
                                 <td class="green">2.6%</td>
                                 <td class="green">Low</td>
                                 <td>
-                                    <div class="btn btn-primary">view</div>
+                                    <a href="user.html" class="btn btn-primary">view</a>
                                 </td>
                             </tr>
                         </tbody>
